# arse

./: .gitignore  README.md  flake.nix  pyproject.toml  pytest.ini
nix/: postgresql.nix  processes.nix  webserver.nix
src/arse/: __init__.py  api.py  db.py  models.py
src/arse/templates/: admin.html  player.html
templates/: admin.html  game_over.html  player.html  player_link.html  player_status.html
tests/: conftest.py  mock_templates.py  test_api.py  test_app.py  test_db.py  test_integration.py  test_models.py
tests/templates/static/: htmx.min.js  simple.min.css
