[project]
name = "arse"
version = "0.1.0"
description = "Augmented Reality State Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.1",
    "psycopg>=3.1.12",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.27.0",
    "greenlet>=3.1.1",
]

[project.scripts]
hello = "arse:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.23.0",
    "aiosqlite>=0.17.0",
    "pytest-cov>=4.1.0"
]

# Add this section to include all Python files
[tool.hatch.build.targets.wheel]
packages = ["src/arse"]

# Add this to make the package importable from src/
[tool.hatch.build]
only-packages = true
artifacts = ["src/arse"] 
